@@ -26,6 +26,7 @@ run = cpanm --installdeps . --notest
 ;  Pod::Weaver::Plugin::Include's looking up pod templates.
 run = perl utils/collect_functions_pod.pl Chart::GGPlot::Geom > docs/pod/temp/GeomFunctions.pod
 run = perl utils/collect_functions_pod.pl Chart::GGPlot::Stat > docs/pod/temp/StatFunctions.pod
+run = perl utils/collect_functions_pod.pl Chart::GGPlot::Coord > docs/pod/temp/CoordFunctions.pod
 [Run::AfterBuild]
 run = cp %d/cpanfile .
 
