@@ -7,7 +7,8 @@ use namespace::autoclean;
 
 # VERSION
 
-use Types::Standard;
+use Types::PDL qw(Piddle1D PiddleFromAny);
+use Types::Standard qw(Maybe);
 
 use Chart::GGPlot::Util qw(:all);
 
@@ -21,8 +22,11 @@ Limits for the y axis.
 
 =cut
 
-has xlim => ( is => 'ro' );
-has ylim => ( is => 'ro' );
+has [qw(xlim ylim)] => (
+    is     => 'ro',
+    isa    => Maybe [ Piddle1D->plus_coercions(PiddleFromAny) ],
+    coerce => 1,
+);
 
 has limits =>
   ( is => 'ro', lazy => 1, builder => '_build_limits', init_arg => undef );
@@ -52,7 +56,52 @@ Is this the default coordinate system?
 
 has default => (is => 'ro', default => sub { false } );
 
-with qw(Chart::GGPlot::Coord);
+with qw(
+  Chart::GGPlot::Coord
+  Chart::GGPlot::HasCollectibleFunctions
+);
+
+my $coord_cartesian_pod = <<'=cut';
+
+    coord_cartesian(:$xlim=undef, :$ylim=undef, :$expand=true)
+
+The Cartesian coordinate system is the most familiar, and common, type of
+coordinate system.
+Setting limits on the coordinate system will zoom the plot (like you're
+looking at it with a magnifying glass), and will not change the underlying
+data like setting limits on a scale will.
+
+Arguments:
+
+=over 4
+
+* $xlim, $ylim 	
+
+Limits for the x and y axes.
+
+* $expand 	
+
+If true, the default, adds a small expansion factor to the limits to ensure
+that data and axes don't overlap.
+If false, limits are taken exactly from the data or C<$xlim>/C<$ylim>.
+
+=back
+
+=cut
+
+my $coord_cartesian_code = sub {
+    return __PACKAGE__->new(@_);
+};
+
+classmethod ggplot_functions () {
+    return [
+        {
+            name => 'coord_cartesian',
+            code => $coord_cartesian_code,
+            pod  => $coord_cartesian_pod,
+        }
+    ];
+}
 
 classmethod is_linear() { true }
 
@@ -87,11 +136,11 @@ method setup_panel_params ($scale_x, $scale_y, $params = {}) {
 method scale_range ($scale, $limits=undef, $expand=true) {
     my $expansion = $expand ? $self->expand_default($scale) : pdl([ 0, 0 ]);
 
-    if ( not defined $limits ) {
+    if ( not defined $limits or $limits->isempty ) {
         return $scale->dimension($expansion);
     }
     else {
-        my $range = range( $scale->transform($limits) );
+        my $range = range_( $scale->transform($limits) );
         return expand_range( $range, $expansion->at(0), $expansion->at(1) );
     }
 }
