@@ -47,7 +47,34 @@ sub _build_r {
 has limits =>
   ( is => 'ro', lazy => 1, builder => '_build_limits', init_arg => undef );
 
-with qw(Chart::GGPlot::Coord);
+with qw(
+  Chart::GGPlot::Coord
+  Chart::GGPlot::HasCollectibleFunctions
+);
+
+my $coord_polar_pod = <<'=cut';
+
+    coord_ploar(:$theta='x', :$start=0, :$direction=1)
+
+=cut
+
+my $coord_polar_code = fun (:$theta ='x', :$start = 0, :$direction = 1) {
+    return __PACKAGE__->new(
+        theta     => $theta,
+        start     => $start,
+        direction => ( $direction <=> 0 ) 
+    );  
+}
+
+classmethod ggplot_functions () {
+    return [
+        {
+            name => 'coord_polar',
+            code => $coord_polar_code,
+            pod  => $coord_polar_pod,
+        }
+    ];  
+}
 
 sub _build_limits {
     my $self = shift;
